--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
     bottom: 0;
     left: 0;
     margin: auto;
+    width: 20%;
 }
 
 .moto{
@@ -48,6 +49,7 @@ body{
     bottom: 0;
     left: 900px;
     margin: auto;
+    width: 20%;
 }
 
 .moto2{
@@ -57,4 +59,5 @@ body{
     bottom: 0;
     left: 0px;
     margin: auto;
+    width: 20%;
 }
